<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvKetemuFloren"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/i_will_meet_floren_at"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/empty_dash"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKetemuFloren"
        tools:text="11 June 2020, 20.00" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMeetFlorenCountDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/there_s_still"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/countDownView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <cn.iwgang.countdownview.CountdownView
        android:id="@+id/countDownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isShowDay="true"
        app:isShowHour="true"
        app:isShowMillisecond="false"
        app:isShowMinute="true"
        app:isShowSecond="true"
        app:isTimeTextBold="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixDay="Days"
        app:suffixGravity="bottom"
        app:suffixHour="Hours"
        app:suffixMillisecond="ms"
        app:suffixMinute="Minutes"
        app:suffixSecond="Second"
        app:suffixTextColor="#000000"
        app:suffixTextSize="@dimen/_12ssp"
        app:timeTextColor="#000000"
        app:timeTextSize="@dimen/_22ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMeetFlorenLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/left"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countDownView" />

    <include
        android:id="@+id/layoutCompleteMeet"
        layout="@layout/layout_complete_meet"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>