<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvKetemuFloren"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/i_will_meet_floren_at"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/empty_dash"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKetemuFloren"
        tools:text="11 June 2020, 20.00" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMeetFlorenCountDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/there_s_still"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/countDownView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <cn.iwgang.countdownview.CountdownView
        android:id="@+id/countDownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isShowDay="true"
        app:isShowHour="true"
        app:isShowMillisecond="false"
        app:isShowMinute="true"
        app:isShowSecond="true"
        app:isTimeTextBold="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixDay="Days"
        app:suffixGravity="bottom"
        app:suffixHour="Hours"
        app:suffixMillisecond="ms"
        app:suffixMinute="Minutes"
        app:suffixSecond="Second"
        app:suffixTextColor="#000000"
        app:suffixTextSize="@dimen/_12ssp"
        app:timeTextColor="#000000"
        app:timeTextSize="@dimen/_22ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMeetFlorenLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/left"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countDownView" />

    <!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
    <!--        android:id="@+id/fabMeetFloren"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="@dimen/_24sdp"-->
    <!--        android:backgroundTint="@color/colorPrimaryDark"-->
    <!--        android:text="@string/meet_floren"-->
    <!--        android:textColor="@color/white"-->
    <!--        app:icon="@drawable/ic_round_date_range_24"-->
    <!--        app:iconTint="@color/white"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completeBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCompleteImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:tint="#99000000"
            tools:src="@drawable/complete_image_sleep" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCompleteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:fontFamily="@font/dancing_script_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/complete_text_sleep" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:text="@string/kiss"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCompleteText"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECECEC"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:elevation="0dp"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu" />


        <ImageView
            android:id="@+id/nav_add_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_center_button"
            android:contentDescription="@string/bottom_sheet_behavior"
            android:padding="15dp"
            android:src="@drawable/ic_round_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>